Courses calculation drafted

--- a/courses.ipynb
+++ b/courses.ipynb
@@ -11,41 +11,14 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 214,
+   "execution_count" : 233,
    "outputs" : [ ],
    "source" : [
-    "# Enter values here\n",
-    "original_year = 2006\n",
-    "original_value = 1.6\n",
-    "change_per_year = 0.2"
-   ],
-   "metadata" : {
-    "collapsed" : false,
-    "pycharm" : {
-     "name" : "#%%\n",
-     "is_executing" : false
-    }
-   }
-  },
-  {
-   "cell_type" : "code",
-   "execution_count" : 215,
-   "outputs" : [
-    {
-     "data" : {
-      "text/plain" : "4.4"
-     },
-     "metadata" : { },
-     "output_type" : "execute_result",
-     "execution_count" : 215
-    }
-   ],
-   "source" : [
     "import datetime\n",
-    "current_year = datetime.datetime.now().year\n",
     "\n",
-    "d = original_value + change_per_year * (current_year - original_year)\n",
-    "d"
+    "def d(year, value, change):\n",
+    "    current_year = datetime.datetime.now().year\n",
+    "    return value + change * (current_year - year)"
    ],
    "metadata" : {
     "collapsed" : false,
@@ -71,7 +44,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 216,
+   "execution_count" : 234,
    "metadata" : {
     "collapsed" : true,
     "pycharm" : {
@@ -86,7 +59,7 @@
      },
      "metadata" : { },
      "output_type" : "execute_result",
-     "execution_count" : 216
+     "execution_count" : 234
     }
    ],
    "source" : [
@@ -98,7 +71,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 217,
+   "execution_count" : 235,
    "outputs" : [ ],
    "source" : [
     "def _assert_course(course):\n",
@@ -135,7 +108,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 218,
+   "execution_count" : 236,
    "outputs" : [ ],
    "source" : [
     "SIGMA = 0.015\n",
@@ -171,7 +144,7 @@
   {
    "cell_type" : "markdown",
    "source" : [
-    "# Deviation Plots for Compass and Magnetic Courses"
+    "# Графики девиации для компасного и магнитного курсов"
    ],
    "metadata" : {
     "collapsed" : false,
@@ -182,7 +155,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 219,
+   "execution_count" : 237,
    "outputs" : [
     {
      "data" : {
@@ -190,7 +163,7 @@
      },
      "metadata" : { },
      "output_type" : "execute_result",
-     "execution_count" : 219
+     "execution_count" : 237
     },
     {
      "data" : {
@@ -229,17 +202,8 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 220,
-   "outputs" : [
-    {
-     "data" : {
-      "text/plain" : "-9.45"
-     },
-     "metadata" : { },
-     "output_type" : "execute_result",
-     "execution_count" : 220
-    }
-   ],
+   "execution_count" : 238,
+   "outputs" : [ ],
    "source" : [
     "def mc_from_cc(compass_course):\n",
     "    \"\"\"\n",
@@ -249,18 +213,112 @@
     "    :return: magnetic course\n",
     "    \"\"\"\n",
     "    sigma = deviation_for_cc(compass_course)\n",
+    "    return _normalize(compass_course + sigma)\n",
     "\n",
-    "    # TODO: normalize\n",
+    "def cc_from_mc(magnetic_course):\n",
+    "    \"\"\"\n",
+    "    Find compass course from magnetic course.\n",
     "\n",
-    "    return compass_course + sigma\n",
-    "\n",
-    "deviation_for_cc(315)\n"
+    "    :param magnetic_course: in degrees\n",
+    "    :return: compass course\n",
+    "    \"\"\"\n",
+    "    sigma = deviation_for_mc(magnetic_course)\n",
+    "    return _normalize(magnetic_course - sigma)"
    ],
    "metadata" : {
     "collapsed" : false,
     "pycharm" : {
      "name" : "#%%\n",
      "is_executing" : false
+    }
+   }
+  },
+  {
+   "cell_type" : "markdown",
+   "source" : [
+    "# Прямая задача – Расчет истинного курса по компасному"
+   ],
+   "metadata" : {
+    "collapsed" : false
+   }
+  },
+  {
+   "cell_type" : "code",
+   "execution_count" : 239,
+   "outputs" : [
+    {
+     "data" : {
+      "text/plain" : "361.9"
+     },
+     "metadata" : { },
+     "output_type" : "execute_result",
+     "execution_count" : 239
+    }
+   ],
+   "source" : [
+    "YEAR = 2006\n",
+    "VALUE = 1.6\n",
+    "CHANGE = 0.2\n",
+    "\n",
+    "COMPASS_COURSE = 0\n",
+    "\n",
+    "dev = d(YEAR, VALUE, CHANGE)\n",
+    "\n",
+    "true_course = mc_from_cc(COMPASS_COURSE) + dev\n",
+    "\n",
+    "true_course"
+   ],
+   "metadata" : {
+    "collapsed" : false,
+    "pycharm" : {
+     "name" : "#%%\n",
+     "is_executing" : false
+    }
+   }
+  },
+  {
+   "cell_type" : "markdown",
+   "source" : [
+    "# Обратная задача – Расчет компасного курса по истинному"
+   ],
+   "metadata" : {
+    "collapsed" : false
+   }
+  },
+  {
+   "cell_type" : "code",
+   "execution_count" : 244,
+   "outputs" : [ ],
+   "source" : [
+    "YEAR = 2006\n",
+    "VALUE = 1.6\n",
+    "CHANGE = 0.2\n",
+    "\n",
+    "TRUE_COURSE = 0\n",
+    "\n",
+    "dev = d(YEAR, VALUE, CHANGE)\n",
+    "\n",
+    "compass_course = cc_from_mc(_normalize(TRUE_COURSE - dev))"
+   ],
+   "metadata" : {
+    "collapsed" : false,
+    "pycharm" : {
+     "name" : "#%%\n",
+     "is_executing" : false
+    }
+   }
+  },
+  {
+   "cell_type" : "code",
+   "execution_count" : null,
+   "outputs" : [ ],
+   "source" : [
+    "\n"
+   ],
+   "metadata" : {
+    "collapsed" : false,
+    "pycharm" : {
+     "name" : "#%%\n"
     }
    }
   }
