--- a/courses.ipynb
+++ b/courses.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 112,
+   "execution_count" : 1,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -40,7 +40,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 113,
+   "execution_count" : 2,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false
@@ -54,7 +54,7 @@
      },
      "metadata" : { },
      "output_type" : "execute_result",
-     "execution_count" : 113
+     "execution_count" : 2
     }
    ],
    "source" : [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 114,
+   "execution_count" : 3,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -102,7 +102,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 115,
+   "execution_count" : 4,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -147,7 +147,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 116,
+   "execution_count" : 5,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -161,7 +161,7 @@
      },
      "metadata" : { },
      "output_type" : "execute_result",
-     "execution_count" : 116
+     "execution_count" : 5
     },
     {
      "data" : {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 117,
+   "execution_count" : 6,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -232,7 +232,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 118,
+   "execution_count" : 7,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -246,7 +246,7 @@
      },
      "metadata" : { },
      "output_type" : "execute_result",
-     "execution_count" : 118
+     "execution_count" : 7
     }
    ],
    "source" : [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 119,
+   "execution_count" : 8,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -285,7 +285,7 @@
      },
      "metadata" : { },
      "output_type" : "execute_result",
-     "execution_count" : 119
+     "execution_count" : 8
     }
    ],
    "source" : [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 120,
+   "execution_count" : 9,
    "outputs" : [ ],
    "source" : [
     "# Check for all compass courses\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 121,
+   "execution_count" : 10,
    "outputs" : [ ],
    "source" : [
     "# Check for all magnetic courses\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 122,
+   "execution_count" : 11,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -385,6 +385,183 @@
     "    \"\"\"\n",
     "    return _normalize(int(input()))"
    ]
+  },
+  {
+   "cell_type" : "code",
+   "execution_count" : 12,
+   "outputs" : [
+    {
+     "data" : {
+      "text/plain" : "-2.5"
+     },
+     "metadata" : { },
+     "output_type" : "execute_result",
+     "execution_count" : 12
+    }
+   ],
+   "source" : [
+    "COMPASS_COURSE = get_input_stub()\n",
+    "\n",
+    "deviation_for_cc(COMPASS_COURSE)"
+   ],
+   "metadata" : {
+    "collapsed" : false,
+    "pycharm" : {
+     "name" : "#%%\n",
+     "is_executing" : false
+    }
+   }
+  },
+  {
+   "cell_type" : "markdown",
+   "source" : [
+    "# Девиация по магнитному курсу"
+   ],
+   "metadata" : {
+    "collapsed" : false
+   }
+  },
+  {
+   "cell_type" : "code",
+   "execution_count" : 13,
+   "outputs" : [
+    {
+     "data" : {
+      "text/plain" : "-2.604000000000001"
+     },
+     "metadata" : { },
+     "output_type" : "execute_result",
+     "execution_count" : 13
+    }
+   ],
+   "source" : [
+    "MAGNETIC_COURSE = get_input_stub()\n",
+    "\n",
+    "deviation_for_mc(MAGNETIC_COURSE)"
+   ],
+   "metadata" : {
+    "collapsed" : false,
+    "pycharm" : {
+     "name" : "#%%\n",
+     "is_executing" : false
+    }
+   }
+  },
+  {
+   "cell_type" : "markdown",
+   "source" : [
+    "# Девиация по компасному курсу"
+   ],
+   "metadata" : {
+    "collapsed" : false
+   }
+  },
+  {
+   "cell_type" : "code",
+   "execution_count" : null,
+   "outputs" : [
+    {
+     "data" : {
+      "text/plain" : "FloatText(value=0.0)",
+      "application/vnd.jupyter.widget-view+json" : {
+       "version_major" : 2,
+       "version_minor" : 0,
+       "model_id" : "5ff7b4873c324d45b8b0c73afe563b48"
+      }
+     },
+     "metadata" : { },
+     "output_type" : "display_data"
+    },
+    {
+     "data" : {
+      "text/plain" : "interactive(children=(FloatSlider(value=0.0, description='compass_course', max=360.0), Output()), _dom_classes…",
+      "application/vnd.jupyter.widget-view+json" : {
+       "version_major" : 2,
+       "version_minor" : 0,
+       "model_id" : "c6f6f5bc54c84118a3e66180cc1487e2"
+      }
+     },
+     "metadata" : { },
+     "output_type" : "display_data"
+    }
+   ],
+   "source" : [
+    "from ipywidgets import interact\n",
+    "\n",
+    "def get_input_with_widgets():\n",
+    "    import ipywidgets as widgets\n",
+    "    from IPython.display import display\n",
+    "\n",
+    "    a = widgets.FloatText()\n",
+    "    b = widgets.FloatSlider(min=0, max=360)\n",
+    "\n",
+    "    display(a)\n",
+    "    widgets.jslink((a, 'value'), (b, 'value'))\n",
+    "\n",
+    "    return b\n",
+    "\n",
+    "@interact(compass_course=get_input_with_widgets(), )\n",
+    "def interactive_deviation_for_cc(compass_course):\n",
+    "    return round(deviation_for_cc(_normalize(compass_course)), 2)"
+   ],
+   "metadata" : {
+    "collapsed" : false,
+    "pycharm" : {
+     "name" : "#%%\n",
+     "is_executing" : true
+    }
+   }
+  },
+  {
+   "cell_type" : "markdown",
+   "source" : [
+    "# Девиация по магнитному курсу"
+   ],
+   "metadata" : {
+    "collapsed" : false
+   }
+  },
+  {
+   "cell_type" : "code",
+   "execution_count" : 15,
+   "outputs" : [
+    {
+     "data" : {
+      "text/plain" : "FloatText(value=0.0)",
+      "application/vnd.jupyter.widget-view+json" : {
+       "version_major" : 2,
+       "version_minor" : 0,
+       "model_id" : "ea12cb3609a54482932ff1cf53e538bc"
+      }
+     },
+     "metadata" : { },
+     "output_type" : "display_data"
+    },
+    {
+     "data" : {
+      "text/plain" : "interactive(children=(FloatSlider(value=0.0, description='magnetic_course', max=360.0), Output()), _dom_classe…",
+      "application/vnd.jupyter.widget-view+json" : {
+       "version_major" : 2,
+       "version_minor" : 0,
+       "model_id" : "4edc8f9e0a1a4f108cb57fe2b7e915f7"
+      }
+     },
+     "metadata" : { },
+     "output_type" : "display_data"
+    }
+   ],
+   "source" : [
+    "@interact(magnetic_course=get_input_with_widgets())\n",
+    "def interactive_deviation_for_mc(magnetic_course):\n",
+    "    return round(deviation_for_mc(_normalize(magnetic_course)), 2)\n"
+   ],
+   "metadata" : {
+    "collapsed" : false,
+    "pycharm" : {
+     "name" : "#%%\n",
+     "is_executing" : false
+    }
+   }
   },
   {
    "cell_type" : "code",
@@ -406,9 +583,9 @@
     }
    ],
    "source" : [
-    "COMPASS_COURSE = get_input_stub()\n",
-    "\n",
-    "deviation_for_cc(COMPASS_COURSE)"
+    "@interact(magnetic_course=get_input_with_widgets())\n",
+    "def interactive_deviation_for_mc(magnetic_course):\n",
+    "    return round(deviation_for_mc(_normalize(magnetic_course)), 2)\n"
    ]
   },
   {
