--- a/courses.ipynb
+++ b/courses.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 1,
+   "execution_count" : 16,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -40,7 +40,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 2,
+   "execution_count" : 17,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false
@@ -54,7 +54,7 @@
      },
      "metadata" : { },
      "output_type" : "execute_result",
-     "execution_count" : 2
+     "execution_count" : 17
     }
    ],
    "source" : [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 3,
+   "execution_count" : 18,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -91,7 +91,7 @@
     "    :param compass_course: in degrees\n",
     "    :return: deviation rounded to 2 decimal digits\n",
     "    \"\"\"\n",
-    "    _assert_course(compass_course)\n",
+    "    _normalize(compass_course)\n",
     "    cell_index = compass_course // 10\n",
     "    next_cell_index = (cell_index + 1) % sigma_table.shape[0]\n",
     "    remainder = compass_course % 10\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 4,
+   "execution_count" : 19,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -147,7 +147,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 5,
+   "execution_count" : 20,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -161,7 +161,7 @@
      },
      "metadata" : { },
      "output_type" : "execute_result",
-     "execution_count" : 5
+     "execution_count" : 20
     },
     {
      "data" : {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 6,
+   "execution_count" : 21,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -232,7 +232,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 7,
+   "execution_count" : 22,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -246,7 +246,7 @@
      },
      "metadata" : { },
      "output_type" : "execute_result",
-     "execution_count" : 7
+     "execution_count" : 22
     }
    ],
    "source" : [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 8,
+   "execution_count" : 23,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -285,7 +285,7 @@
      },
      "metadata" : { },
      "output_type" : "execute_result",
-     "execution_count" : 8
+     "execution_count" : 23
     }
    ],
    "source" : [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 9,
+   "execution_count" : 24,
    "outputs" : [ ],
    "source" : [
     "# Check for all compass courses\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 10,
+   "execution_count" : 25,
    "outputs" : [ ],
    "source" : [
     "# Check for all magnetic courses\n",
@@ -354,20 +354,8 @@
    }
   },
   {
-   "cell_type" : "markdown",
-   "metadata" : {
-    "pycharm" : {
-     "is_executing" : false,
-     "name" : "#%% md\n"
-    }
-   },
-   "source" : [
-    "# Девиация по компасному курсу"
-   ]
-  },
-  {
    "cell_type" : "code",
-   "execution_count" : 11,
+   "execution_count" : 26,
    "metadata" : {
     "pycharm" : {
      "is_executing" : false,
@@ -387,8 +375,17 @@
    ]
   },
   {
+   "cell_type" : "markdown",
+   "source" : [
+    "# Девиация по компасному курсу"
+   ],
+   "metadata" : {
+    "collapsed" : false
+   }
+  },
+  {
    "cell_type" : "code",
-   "execution_count" : 12,
+   "execution_count" : 27,
    "outputs" : [
     {
      "data" : {
@@ -396,11 +393,11 @@
      },
      "metadata" : { },
      "output_type" : "execute_result",
-     "execution_count" : 12
+     "execution_count" : 27
     }
    ],
    "source" : [
-    "COMPASS_COURSE = get_input_stub()\n",
+    "COMPASS_COURSE = 0\n",
     "\n",
     "deviation_for_cc(COMPASS_COURSE)"
    ],
@@ -423,7 +420,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 13,
+   "execution_count" : 28,
    "outputs" : [
     {
      "data" : {
@@ -431,11 +428,11 @@
      },
      "metadata" : { },
      "output_type" : "execute_result",
-     "execution_count" : 13
+     "execution_count" : 28
     }
    ],
    "source" : [
-    "MAGNETIC_COURSE = get_input_stub()\n",
+    "MAGNETIC_COURSE = 0\n",
     "\n",
     "deviation_for_mc(MAGNETIC_COURSE)"
    ],
@@ -458,7 +455,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : null,
+   "execution_count" : 29,
    "outputs" : [
     {
      "data" : {
@@ -466,7 +463,7 @@
       "application/vnd.jupyter.widget-view+json" : {
        "version_major" : 2,
        "version_minor" : 0,
-       "model_id" : "5ff7b4873c324d45b8b0c73afe563b48"
+       "model_id" : "863afe4578bf430a984d3b7915c33214"
       }
      },
      "metadata" : { },
@@ -478,7 +475,7 @@
       "application/vnd.jupyter.widget-view+json" : {
        "version_major" : 2,
        "version_minor" : 0,
-       "model_id" : "c6f6f5bc54c84118a3e66180cc1487e2"
+       "model_id" : "46b9aa607fcd49979657dbbc47c5dd7f"
       }
      },
      "metadata" : { },
@@ -508,7 +505,7 @@
     "collapsed" : false,
     "pycharm" : {
      "name" : "#%%\n",
-     "is_executing" : true
+     "is_executing" : false
     }
    }
   },
@@ -523,7 +520,7 @@
   },
   {
    "cell_type" : "code",
-   "execution_count" : 15,
+   "execution_count" : 30,
    "outputs" : [
     {
      "data" : {
@@ -531,7 +528,7 @@
       "application/vnd.jupyter.widget-view+json" : {
        "version_major" : 2,
        "version_minor" : 0,
-       "model_id" : "ea12cb3609a54482932ff1cf53e538bc"
+       "model_id" : "6d1910d9d34e403282dd987b49437290"
       }
      },
      "metadata" : { },
@@ -543,7 +540,7 @@
       "application/vnd.jupyter.widget-view+json" : {
        "version_major" : 2,
        "version_minor" : 0,
-       "model_id" : "4edc8f9e0a1a4f108cb57fe2b7e915f7"
+       "model_id" : "c094ea536c124f5bb0194eaef793c167"
       }
      },
      "metadata" : { },
@@ -553,7 +550,8 @@
    "source" : [
     "@interact(magnetic_course=get_input_with_widgets())\n",
     "def interactive_deviation_for_mc(magnetic_course):\n",
-    "    return round(deviation_for_mc(_normalize(magnetic_course)), 2)\n"
+    "    return round(deviation_for_mc(_normalize(magnetic_course)), 2)\n",
+    "\n"
    ],
    "metadata" : {
     "collapsed" : false,
@@ -562,185 +560,6 @@
      "is_executing" : false
     }
    }
-  },
-  {
-   "cell_type" : "code",
-   "execution_count" : 123,
-   "metadata" : {
-    "pycharm" : {
-     "is_executing" : false,
-     "name" : "#%%\n"
-    }
-   },
-   "outputs" : [
-    {
-     "data" : {
-      "text/plain" : "-2.5"
-     },
-     "metadata" : { },
-     "output_type" : "execute_result",
-     "execution_count" : 123
-    }
-   ],
-   "source" : [
-    "@interact(magnetic_course=get_input_with_widgets())\n",
-    "def interactive_deviation_for_mc(magnetic_course):\n",
-    "    return round(deviation_for_mc(_normalize(magnetic_course)), 2)\n"
-   ]
-  },
-  {
-   "cell_type" : "markdown",
-   "metadata" : {
-    "pycharm" : {
-     "name" : "#%% md\n"
-    }
-   },
-   "source" : [
-    "# Девиация по магнитному курсу"
-   ]
-  },
-  {
-   "cell_type" : "code",
-   "execution_count" : 124,
-   "metadata" : {
-    "pycharm" : {
-     "is_executing" : false,
-     "name" : "#%%\n"
-    }
-   },
-   "outputs" : [
-    {
-     "data" : {
-      "text/plain" : "-2.604000000000001"
-     },
-     "metadata" : { },
-     "output_type" : "execute_result",
-     "execution_count" : 124
-    }
-   ],
-   "source" : [
-    "MAGNETIC_COURSE = get_input_stub()\n",
-    "\n",
-    "deviation_for_mc(MAGNETIC_COURSE)"
-   ]
-  },
-  {
-   "cell_type" : "markdown",
-   "metadata" : {
-    "pycharm" : {
-     "name" : "#%% md\n"
-    }
-   },
-   "source" : [
-    "# Девиация по компасному курсу"
-   ]
-  },
-  {
-   "cell_type" : "code",
-   "execution_count" : 125,
-   "metadata" : {
-    "pycharm" : {
-     "is_executing" : false,
-     "name" : "#%%\n"
-    }
-   },
-   "outputs" : [
-    {
-     "data" : {
-      "text/plain" : "FloatText(value=0.0)",
-      "application/vnd.jupyter.widget-view+json" : {
-       "version_major" : 2,
-       "version_minor" : 0,
-       "model_id" : "a82c64ba0d4440b1b48dff1951f4f721"
-      }
-     },
-     "metadata" : { },
-     "output_type" : "display_data"
-    },
-    {
-     "data" : {
-      "text/plain" : "interactive(children=(FloatSlider(value=0.0, description='compass_course', max=360.0), Output()), _dom_classes…",
-      "application/vnd.jupyter.widget-view+json" : {
-       "version_major" : 2,
-       "version_minor" : 0,
-       "model_id" : "d6da8d7fc58d4f30801190d19e43c593"
-      }
-     },
-     "metadata" : { },
-     "output_type" : "display_data"
-    }
-   ],
-   "source" : [
-    "from ipywidgets import interact\n",
-    "\n",
-    "def get_input_with_widgets():\n",
-    "    import ipywidgets as widgets\n",
-    "    from IPython.display import display\n",
-    "\n",
-    "    a = widgets.FloatText()\n",
-    "    b = widgets.FloatSlider(min=0, max=360)\n",
-    "\n",
-    "    display(a)\n",
-    "    widgets.jslink((a, 'value'), (b, 'value'))\n",
-    "\n",
-    "    return b\n",
-    "\n",
-    "@interact(compass_course=get_input_with_widgets(), )\n",
-    "def interactive_deviation_for_cc(compass_course):\n",
-    "    return round(deviation_for_cc(_normalize(compass_course)), 2)"
-   ]
-  },
-  {
-   "cell_type" : "markdown",
-   "metadata" : {
-    "pycharm" : {
-     "name" : "#%% md\n"
-    }
-   },
-   "source" : [
-    "# Девиация по магнитному курсу"
-   ]
-  },
-  {
-   "cell_type" : "code",
-   "execution_count" : 126,
-   "metadata" : {
-    "pycharm" : {
-     "is_executing" : false,
-     "name" : "#%%\n"
-    }
-   },
-   "outputs" : [
-    {
-     "data" : {
-      "text/plain" : "FloatText(value=0.0)",
-      "application/vnd.jupyter.widget-view+json" : {
-       "version_major" : 2,
-       "version_minor" : 0,
-       "model_id" : "0040ee2aa5cf405f92a50c7b07a9d821"
-      }
-     },
-     "metadata" : { },
-     "output_type" : "display_data"
-    },
-    {
-     "data" : {
-      "text/plain" : "interactive(children=(FloatSlider(value=0.0, description='magnetic_course', max=360.0), Output()), _dom_classe…",
-      "application/vnd.jupyter.widget-view+json" : {
-       "version_major" : 2,
-       "version_minor" : 0,
-       "model_id" : "632045047ffb45949ac25e01cb1882c3"
-      }
-     },
-     "metadata" : { },
-     "output_type" : "display_data"
-    }
-   ],
-   "source" : [
-    "@interact(magnetic_course=get_input_with_widgets())\n",
-    "def interactive_deviation_for_mc(magnetic_course):\n",
-    "    return round(deviation_for_mc(_normalize(magnetic_course)), 2)\n"
-   ]
   }
  ],
  "metadata" : {
